Added ViewPager2, now fully functional
ViewPager2 now successfully allows swiping between different pages/cards. I will merge to main before adding new features like animations.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="card_corner_radius">20dp</dimen>
     <dimen name="card_elevation">20dp</dimen>
     <dimen name="card_margin">20dp</dimen>
+    <dimen name="card_contents_margin">20dp</dimen>
 </resources>
